engine/test_pgns/valid/spawns.pgn
[GameType "Base+MLP"]
[Date "2023.03.22"]
[Event ""]
[Site ""]
[Round ""]
[White "leex"]
[Black "noi"]
[Result "InProgress"]

1. wA1
2. bA1 wA1/
3. wQ -wA1
4. bQ \bA1
5. wQ \wA1
6. bG1 \bQ
7. wA1 bG1/
8. bA1 -bG1
9. wA1 /bA1
10. bM \bG1
11. wA2 -wA1
12. bM /wA2
13. wQ bA1\
14. bA1 wA1\
